syntax = "proto3";

package weather;

option go_package = "internal/services/weather-service/proto";

service WeatherService {
  rpc GetWeather (WeatherRequest) returns (WeatherResponse);
}

message WeatherRequest {
  string city = 1;
}

message WeatherResponse {
  string city = 1;
  string description = 2;
  double temperature = 3;
  double humidity = 4;
} 